testdata/baselines/reference/submodule/conformance/moduleExportAlias2.errors.txt
index.js(3,13): error TS2339: Property 'f' does not exist on type '() => void'.
semver.js(2,1): error TS2631: Cannot assign to '"semver"' because it is a namespace.
semver.js(2,11): error TS2309: An export assignment cannot be used in a module with other exported elements.
semver.js(3,9): error TS2339: Property 'f' does not exist on type 'typeof import("semver")'.


==== index.js (1 errors) ====
    /// <reference path='node.d.ts' />
    const C = require("./semver")
    var two = C.f(1)
                ~
!!! error TS2339: Property 'f' does not exist on type '() => void'.
    var c = new C
    
==== node.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
    declare var module: { exports: any };
==== semver.js (3 errors) ====
    /// <reference path='node.d.ts' />
    exports = module.exports = C
    ~~~~~~~
!!! error TS2631: Cannot assign to '"semver"' because it is a namespace.
              ~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    exports.f = n => n + 1
            ~
!!! error TS2339: Property 'f' does not exist on type 'typeof import("semver")'.
    function C() {
        this.p = 1
    }